--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -220,6 +220,7 @@
             android:layout_width="200dp"
             android:layout_height="220dp"
             android:id="@+id/imgView"
+            android:src="@drawable/ic_baseline_photo_camera_24"
             android:layout_alignParentTop="true"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
